fixes footer sitemap on IE6/7 #2929
-uses fixed height for first row of menu-items to control flow
-removes padding from ship-items since icons aren't shown (needing :before)

--- a/css/v03/footer.less
+++ b/css/v03/footer.less
@@ -213,3 +213,26 @@
   float:right;
 }
 
+.lt-ie8 .desktop .footer-sitemap {
+  ul.links {
+    li {
+      display: inline;
+  
+      ul {
+        height: 250px;
+      }
+      ul.hot-this-month, ul.social,
+      ul.organization, ul.ships {
+        height: auto;
+      }
+      ul li {
+        display: block;
+      }
+    }
+  }
+}
+.lt-ie9 .desktop .footer-sitemap {
+  .facts .ship {
+    padding-left: 0;
+  }
+}
